Fix contrast of navbar text

--- a/_assets/css/customize-bootstrap.scss
+++ b/_assets/css/customize-bootstrap.scss
@@ -54,3 +54,12 @@ $line-height-base:            1.636;
 // $display-line-height:         $headings-line-height !default;
 
 $jumbotron-bg: $primary;
+
+// Get better contrast for the navbar.
+$navbar-dark-color:                 #ffffff;
+$navbar-dark-hover-color:           rgba(#ffffff, .75);
+$navbar-dark-active-color:          #ffffff;
+$navbar-dark-disabled-color:        rgba(#ffffff, .5);
+// $navbar-dark-toggler-icon-bg:       url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' width='30' height='30' viewBox='0 0 30 30'><path stroke='#{$navbar-dark-color}' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/></svg>") !default;
+$navbar-dark-toggler-border-color:  rgba(#ffffff, .1);
+
